# OSINT

./: .dockerignore  .gitignore  Dockerfile  MANUAL.md  Makefile  POSITIONING-SCRATCH.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backend.yml  build-status.yml  buildExpected.yml  codeql.yml  dependency-review.yml  frontend.yml  production-guardrails.yml
app/: __init__.py  api.py  celery_app.py  db.py  db_models.py  events_bus.py  fetcher_registry.py  housekeeping.py  models.py  persistence.py  settings.py  tasks.py  watchdog.py
app/audit/: __init__.py  checks.py  expectations.py  run.py  stats.py
app/backtest/: __init__.py  backfill.py  build_registry.py  events.yaml  gdelt_archive.py  metrics.py  narrative.py  null_model.py  pacing.py  registry.py  report.py  run.py  sensitivity.py  source_compare.py
app/baselines/: __init__.py  metrics.py  predictors.py  run.py  targets.py
app/brain/: __init__.py  client.py  context.py  deepread.py  embeddings.py  enrich.py  enrich_run.py  gate.py  gist_cleanup.py  numerals.py  qa.py  qa_audit.py  qa_eval.py  qa_rubric.py  run.py  sensors.py  task.py
app/briefing/: __init__.py  render.py  run.py  task.py  verdicts.py
app/cii/: __init__.py  config.py  scoring.py  task.py
app/composite/: __init__.py  aggregation.py  backfill.py  config.py  degeneracy.py  fips.py  gdelt.py  history.py  normalization.py  persistence.py  scoring.py  task.py
app/corroboration/: __init__.py  (+4 more)
docs/: acled-non-api-collection.md  analytical-agenda.md  architecture-spec.md  data-coverage.md  disagreement-exam.md  evaluation-protocol.md  github-dokploy-workflow.md  literature-baseline.md  master-plan.md  methodology.md  onset-eval.md  project-direction.md  px5928-requirements-and-status.md  requirements.md  security.md  storage.md  within-country-eval.md
migrations/: env.py
osint-frontend/: eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
scripts/: acled_browser_sync.py  acled_discover.py  backfill.py  backfill_footprint_budget.py  backfill_news_cities.py  backfill_news_ner.py  backfill_news_scope.py  backfill_news_sentiment.py  compare_narrative_sources.py  data_audit.py  db_snapshot.py  dev-clean.sh  dev-clear.sh  dev-down.sh  dev-off.sh  dev-up.sh  enrich_country.py  firms_severity_backfill.py  gdelt_archive.py  gist_cleanup.py  install_nlp_deps.sh  prune_now.py  snapshot.py
supabase/: 01_schema.sql  02_rls_policies.sql  README.md
tests/: conftest.py  test_abuse_ch_fetchers.py  test_acled_bounded_parse.py  test_acled_browser_sync.py  test_acled_fetcher.py  test_acled_file_cache.py  test_api.py  test_api_analytics.py  test_api_story_detail.py  test_audit_checks.py  test_audit_run.py  test_backfill.py  test_backtest_backfill.py  test_backtest_build_registry.py  test_backtest_metrics.py  test_backtest_narrative.py  test_backtest_null_model.py  test_backtest_pacing.py  test_backtest_registry.py  test_backtest_registry_frozen.py  test_backtest_report.py  test_backtest_run.py  test_backtest_source_compare.py  test_baselines_metrics.py  test_baselines_predictors.py  test_baselines_targets.py  test_brain_api.py  test_brain_ask_api.py  test_brain_client.py  test_brain_context.py  test_brain_embeddings.py  test_brain_enrich_numeric_gate.py  test_brain_enrich_parse.py  test_brain_enrich_worker.py  test_brain_eviction_hook.py  test_brain_gate.py  test_brain_gate_prefix.py  test_brain_gist_cleanup.py  test_brain_narrative_model.py  test_brain_numerals.py  (+117 more)
(+273 files in other folders)
