[project]
name = "osint"
version = "0.0.1"
description = "Multi-modal OSINT composite stress index (MSc thesis, PX5928)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Basil Suhail" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "celery>=5.4",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "pandas>=2.2",
    "numpy>=2.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "ruff==0.15.18",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes basics
# I:   import order
# B:   bugbear
# UP:  pyupgrade (datetime.UTC etc.)
# N:   pep8-naming
# SIM: simplifications
# RUF: ruff-specific rules
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
